[metadata]
name = MCML-tarachari3
version = 0.0.1
author = Tara Chari
author_email = tarachari3@gmail.com
description = Semi-supervised Dimensionality Reduction for Multi-Class, Multi-Label Data 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pachterlab/MCML
project_urls =
    Bug Tracker = https://github.com/pachterlab/MCML/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 2 clause License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
